<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">哔哩哔哩动画</string>
    <string name="nav_home">首页</string>
    <string name="nav_dl">离线管理</string>
    <string name="nav_fav">我的收藏</string>
    <string name="nav_his">历史记录</string>
    <string name="nav_follow">关注的人</string>
    <string name="nav_cost">消费记录</string>
    <string name="nav_theme">主题选择</string>

    <string name="nav_settings">设置与帮助</string>
    <string name="version_name">1.0</string>
    <string name="title_file">本地视频</string>
    <string name="title_online">在线视频</string>
    <string name="init_decoders">初始化播放器...</string>
    <string name="loadinfo">载入中，请稍后...</string>
    <string name="file_oper">文件操作</string>
    <string name="file_rename">重命名</string>
    <string name="file_rename_failed">重命名失败</string>
    <string name="file_rename_exists">文件已存在</string>
    <string name="file_delete">删除</string>
    <string name="file_delete_confirm">确定删除 (%s) ？</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="vitamio_theme_app_name">VPlayer codec</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="imageview_content_description"></string>
    <string name="content_desc_lock">锁定</string>
    <string name="video_original">100%</string>
    <string name="video_fit_screen">全屏</string>
    <string name="video_stretch">拉伸</string>
    <string name="video_crop">裁剪</string>
    <string name="video_screen_locked">屏幕已锁定</string>
    <string name="video_screen_unlocked">屏幕锁定已解除</string>
    <string name="video_layout_buffering_progress">缓冲: %.2f%%</string>
    <string name="video_cannot_play">对不起,这个视频不能播放。</string>
    <string name="file_explorer_sdcard_not_available">SD卡无法读取</string>
    <string name="video_screenshot_save_in">截图存放在 %s.</string>
    <string name="video_screenshot_failed">截图失败</string>
    <string name="closing_file">正在退出…</string>
    <string name="action_settings">settings</string>

    <string name="action_seatch">搜索</string>
    <string name="action_save">保存</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <array name="home_tab_title">
        <item>直播</item>
        <item>番剧</item>
        <item>推荐</item>
        <item>分区</item>
        <item>关注</item>
        <item>发现</item>
    </array>
    <string name="vcv_title">读取中...</string>
    <string name="vcv_play_count">0</string>
    <string name="vcv_comment_count">0</string>



</resources>
